...
    
    var likeButton: UIButton = {
        var button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        
        
        button.accessibilityIdentifier = "like button off"
       
        button.setImage(UIImage(named: "LikeNo"), for: .normal)
        button.setImage(UIImage(named: "Like"), for: .selected)
        
        button.addTarget(nil, action: #selector(likeButtonTapped), for: .touchUpInside)
        
...
    func setIsLiked(_ isLiked: Bool) {
        //likeButton.isSelected = photo.isLiked
        
        likeButton.isSelected = isLiked
        
        if likeButton.isSelected == true {
            likeButton.accessibilityIdentifier = "like button on"
        } else {
            likeButton.accessibilityIdentifier = "like button off"
        }
    }
}

...
