...
        imageView.heightAnchor.constraint(equalToConstant: 60).isActive = true
        return imageView
    }()
    
    var enterButton: UIButton = {
       var button = UIButton()
        button.accessibilityIdentifier = "Authenticate"
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Войти", for: .normal)
        button.setTitleColor(Colors.ypBlack, for: .normal)
        button.backgroundColor = Colors.ypWhite
        button.layer.cornerRadius = 16
        button.titleLabel?.font = UIFont(name: "YSDisplay-Medium", size: 20)
...
